[gd_scene load_steps=22 format=3 uid="uid://b7gy0dhrbd1r"]

[ext_resource type="Script" uid="uid://dfk2uh45lapmb" path="res://scripts/tyrant_enemy.gd" id="1_bbou3"]
[ext_resource type="Texture2D" uid="uid://bsjtqql1dwxtk" path="res://asset/tyrant4.png" id="2_pgipg"]
[ext_resource type="Texture2D" uid="uid://cc4ml7vwomg05" path="res://asset/tyrant5.png" id="3_pgipg"]
[ext_resource type="FontFile" uid="uid://d4ghpgk7gwwdw" path="res://asset/fonts/PixelOperator8.ttf" id="5_1vei7"]
[ext_resource type="Texture2D" uid="uid://cku1trcrwyf8i" path="res://asset/tyrant_death_screen.jpeg" id="5_jpoaw"]
[ext_resource type="PackedScene" uid="uid://dtr586yu3mi35" path="res://scenes/level_transition.tscn" id="6_51c7b"]
[ext_resource type="AudioStream" uid="uid://c0ogffsjn6fsl" path="res://asset/game making/enemy sound/gunshot/meaty-gunshot-101257.mp3" id="6_x7ksn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bbou3"]
atlas = ExtResource("2_pgipg")
region = Rect2(0, 0, 169, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgipg"]
atlas = ExtResource("2_pgipg")
region = Rect2(169, 0, 169, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpoaw"]
atlas = ExtResource("2_pgipg")
region = Rect2(338, 0, 169, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vei7"]
atlas = ExtResource("2_pgipg")
region = Rect2(169, 92, 169, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_51c7b"]
atlas = ExtResource("2_pgipg")
region = Rect2(338, 92, 169, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7ksn"]
atlas = ExtResource("2_pgipg")
region = Rect2(507, 92, 169, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjhej"]
atlas = ExtResource("2_pgipg")
region = Rect2(507, 0, 169, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpssy"]
atlas = ExtResource("3_pgipg")
region = Rect2(174, 87, 87, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_50mf2"]
atlas = ExtResource("3_pgipg")
region = Rect2(261, 87, 87, 87)

[sub_resource type="SpriteFrames" id="SpriteFrames_bpssy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbou3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgipg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpoaw")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vei7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51c7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7ksn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjhej")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpssy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50mf2")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_50mf2"]
radius = 15.033297

[sub_resource type="CircleShape2D" id="CircleShape2D_wd7i4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rf6g3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bvqj1"]
radius = 18.0
height = 76.0

[node name="tyrant_enemy" type="CharacterBody2D"]
scale = Vector2(0.44000354, 0.44000354)
script = ExtResource("1_bbou3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_bpssy")
animation = &"walk_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 4)
shape = SubResource("CircleShape2D_50mf2")

[node name="activation_radius" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="activation_radius"]
scale = Vector2(32, 32)
shape = SubResource("CircleShape2D_wd7i4")

[node name="deactivation_radius" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="deactivation_radius"]
scale = Vector2(60, 60)
shape = SubResource("CircleShape2D_rf6g3")

[node name="death_layer" type="CanvasLayer" parent="."]

[node name="death_screen_tyrant" type="TextureRect" parent="death_layer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_jpoaw")

[node name="tyrant_kill" type="Area2D" parent="."]
position = Vector2(2.272709, 0)
scale = Vector2(1.0909104, 1.0909104)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="tyrant_kill"]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_bvqj1")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="death_screen" type="ColorRect" parent="CanvasLayer2"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer2/death_screen"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -16.0
offset_right = 132.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5568628, 0.07058824, 0.039215688, 1)
theme_override_fonts/font = ExtResource("5_1vei7")
theme_override_font_sizes/font_size = 32
text = "YOU DIED!!!"

[node name="Button" type="Button" parent="CanvasLayer2/death_screen"]
process_mode = 3
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.929
anchor_right = 0.5
anchor_bottom = 0.929
offset_left = -105.0
offset_top = -89.0
offset_right = 110.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5568628, 0.07058824, 0.039215688, 1)
theme_override_fonts/font = ExtResource("5_1vei7")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="death_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_x7ksn")

[node name="CanvasLayer" parent="." instance=ExtResource("6_51c7b")]

[connection signal="body_entered" from="activation_radius" to="." method="_on_activation_radius_body_entered"]
[connection signal="body_exited" from="deactivation_radius" to="." method="_on_deactivation_radius_body_exited"]
[connection signal="body_entered" from="tyrant_kill" to="." method="_on_tyrant_kill_body_entered"]
[connection signal="pressed" from="CanvasLayer2/death_screen/Button" to="." method="_on_button_pressed"]
